<resources>
    <string name="app_name">Card Scanner</string>

    <!-- Permission Strings -->
    <string name="permission_rationale">You should allow camera and storage so that scanner can work.</string>
    <string name="allow">Allow</string>
    <string name="permissions_not_granted">All permissions are not granted.</string>
    <string name="permissions_granted">All permissions are now granted.</string>

    <!--<string name="call_permission_rationale">You should allow calls to charge with the scanned number.</string>
    <string name="call_permission_granted">Call permission is now granted.</string>
    <string name="call_permission_not_granted">Call permission was not granted.</string>-->

    <!-- Camera Strings -->
    <string name="no_image_received">No image was captured.</string>

    <!-- Buttons Strings -->
    <string name="start_btn">Start</string>
    <string name="new_scan_btn">New Scan</string>
    <string name="next_btn">Next</string>


    <!-- Messages Strings -->
    <string name="number_found">Got the number, click next.</string>
    <string name="number_not_found">Number was not found, please try with a closer picture.</string>

    <!-- Operator Screen -->
    <string name="select_operator">Select operator</string>
    <string name="etisalat">Etisalat</string>
    <string name="vodafone">Vodafone</string>
    <string name="orange">Orange</string>
    <string name="we">We</string>



    <!-- Settings -->
    <string name="settings_str">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_section_general">General</string>
    <string name="pref_section_about">About</string>
    <!-- Image Saving -->
   <!-- <string name="pref_save_img_key">save_img_checkbox</string>
    <string name="pref_save_img_summary">Use this checkbox to choose whether to save images after scanning</string>
    <string name="pref_save_img_title">Save image after scanning</string>-->
    <!-- Font Size -->
    <string name="pref_font_size_key">font_size_list</string>
    <string name="pref_font_size_summary">Specify displaying font size</string>
    <string name="pref_font_size_title">Font Size</string>
    <string name="pref_font_size_dialog_title">Font Size</string>
    <!-- app version -->
    <string name="pref_version_title">Version</string>
    <string name="pref_version_key">app_version</string>
    <string name="pref_version_summary">0.0</string>
    <!-- Developer -->
    <!-- <string name="pref_developer_title">Developer</string>
    <string name="pref_developer_key">developer_info</string>
    <string name="pref_developer_summary">Mohamed Mabrouk</string>-->
    <!-- Feedback -->
    <string name="pref_feedback_title">Send Feedback</string>
    <string name="pref_feedback_key">feedback_pref</string>
    <string name="pref_feedback_summary">Got any question or feedback? We are happy to help!</string>
    <string name="pref_choose_email_client">Choose email client</string>
</resources>
