<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_section_general">
        <!--<SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_save_img_key"
            android:summary="@string/pref_save_img_summary"
            android:title="@string/pref_save_img_title"/>-->

        <ListPreference
            android:defaultValue="0"
            android:dialogTitle="@string/pref_font_size_dialog_title"
            android:entries="@array/pref_font_size_enteries"
            android:entryValues="@array/pref_font_size_values"
            android:key="@string/pref_font_size_key"
            android:summary="@string/pref_font_size_summary"
            android:title="@string/pref_font_size_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_section_about">
        <Preference
            android:title="@string/pref_version_title"
            android:key="@string/pref_version_key"
            android:summary="@string/pref_version_summary">
        </Preference>

        <!--<Preference
            android:title="@string/pref_developer_title"
            android:key="@string/pref_developer_key"
            android:summary="@string/pref_developer_summary">
        </Preference>-->


        <Preference
            android:key="@string/pref_feedback_key"
            android:summary="@string/pref_feedback_summary"
            android:title="@string/pref_feedback_title" />
    </PreferenceCategory>
</PreferenceScreen>