<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.OperatorActivity"
    android:orientation="vertical"
    android:background="@mipmap/background">

    <TextView
        android:id="@+id/guide_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/select_operator"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />




    <Button
        android:id="@+id/btn_etisalat"
        android:layout_width="@dimen/operator_btn_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/btn_scan_now_margin"
        android:background="@drawable/bg_btn_scannow"
        android:fontFamily="sans-serif-thin"
        android:paddingBottom="@dimen/btn_scan_now_vertical_padding"
        android:paddingLeft="@dimen/btn_scan_now_horizontal_padding"
        android:paddingRight="@dimen/btn_scan_now_horizontal_padding"
        android:paddingTop="@dimen/btn_scan_now_vertical_padding"
        android:text="@string/etisalat"
        android:textAllCaps="false"
        android:textColor="@color/scanbtn"
        android:textSize="@dimen/btn_scan_now_font_size"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/btn_vodafone"
        android:layout_width="@dimen/operator_btn_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/btn_scan_now_margin"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_btn_scannow"
        android:fontFamily="sans-serif-thin"
        android:paddingBottom="@dimen/btn_scan_now_vertical_padding"
        android:paddingLeft="@dimen/btn_scan_now_horizontal_padding"
        android:paddingRight="@dimen/btn_scan_now_horizontal_padding"
        android:paddingTop="@dimen/btn_scan_now_vertical_padding"
        android:text="@string/vodafone"
        android:textAllCaps="false"
        android:textColor="@color/scanbtn"
        android:textSize="@dimen/btn_scan_now_font_size"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/btn_orange"
        android:layout_width="@dimen/operator_btn_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/btn_scan_now_margin"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_btn_scannow"
        android:fontFamily="sans-serif-thin"
        android:paddingBottom="@dimen/btn_scan_now_vertical_padding"
        android:paddingLeft="@dimen/btn_scan_now_horizontal_padding"
        android:paddingRight="@dimen/btn_scan_now_horizontal_padding"
        android:paddingTop="@dimen/btn_scan_now_vertical_padding"
        android:text="@string/orange"
        android:textAllCaps="false"
        android:textColor="@color/scanbtn"
        android:textSize="@dimen/btn_scan_now_font_size"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/btn_we"
        android:layout_width="@dimen/operator_btn_width"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/btn_scan_now_margin"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_btn_scannow"
        android:fontFamily="sans-serif-thin"
        android:paddingBottom="@dimen/btn_scan_now_vertical_padding"
        android:paddingLeft="@dimen/btn_scan_now_horizontal_padding"
        android:paddingRight="@dimen/btn_scan_now_horizontal_padding"
        android:paddingTop="@dimen/btn_scan_now_vertical_padding"
        android:text="@string/we"
        android:textAllCaps="false"
        android:textColor="@color/scanbtn"
        android:textSize="@dimen/btn_scan_now_font_size"
        android:layout_gravity="center_horizontal"/>


</LinearLayout>